loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:2: error: value > is not a member of object Int
while(Int>0){
         ^