loopwhile.LoopWhile.scala.code
getX():Int;
while(Int>0){
  avance();
  ;
}